--- a/web/app/themes/launcheffect/ss/main.css
+++ b/web/app/themes/launcheffect/ss/main.css
@@ -286,9 +286,24 @@ html.ie7 #launchlitemodule #signup .signup-left {
 }
 
 #signup-page header h1 {
+    font-family: Raleway;
+    font-weight: 700;
+    font-style: normal;
+    font-size:2.5em;
+    text-align: center;
+    color: #13224d;
+    text-shadow: #13224d -1px 1px 0,
+        #13224d -2px 2px 0,
+        #aa893a -3px 3px 0,
+        #aa893a -4px 4px 0;
     position:relative;
     margin:0;
     line-height:1.2em;
+}
+
+#signup-page header h1 span {
+    display: block;
+    text-align: center;
 }
 
 #signup-page header h1.hastextheading.haslogo span {
