Add learn-more-tab css to main.css

--- a/web/app/themes/launcheffect/ss/main.css
+++ b/web/app/themes/launcheffect/ss/main.css
@@ -180,6 +180,26 @@ a:active {
     text-align: left;
 }
 
+/* Learn More Tab
+================================================== */
+
+#learn-more-tab {
+    margin: 10px auto 0 auto;
+    width: 590px;
+}
+
+a#learn-more {
+    font-family: Raleway, Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.6em;
+    font-weight: 700;
+    color: #C53FA7;
+    background: transparent;
+}
+
+a#learn-more:hover {
+    background: transparent;
+}
+
 /* #Container
 ================================================== */
 
