--- a/web/app/themes/launcheffect/ss/main.css
+++ b/web/app/themes/launcheffect/ss/main.css
@@ -8,12 +8,37 @@
  *
  */
 
+@font-face {
+    font-family: 'Accent';
+    src: url('./fonts/accent-webfont.eot');
+    src: url('./fonts/accent-webfont.eot?#iefix') format('embedded-opentype'),
+         url('./fonts/accent-webfont.woff2') format('woff2'),
+         url('./fonts/accent-webfont.woff') format('woff'),
+         url('./fonts/accent-webfont.ttf') format('truetype'),
+         url('./fonts/accent-webfont.svg#accent') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Cubano';
+    src: url('./fonts/cubano-webfont.eot');
+    src: url('./fonts/cubano-webfont.eot?#iefix') format('embedded-opentype'),
+         url('./fonts/cubano-webfont.woff2') format('woff2'),
+         url('./fonts/cubano-webfont.woff') format('woff'),
+         url('./fonts/cubano-webfont.ttf') format('truetype'),
+         url('./fonts/cubano-webfont.svg#cubano') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
 
 /* Table of Contents
 ==================================================
 #Reset & Basics
 #Clearfix
 #Basic Styles
+#Learn More Tab
 #Container
 #Form
 #Messages
@@ -221,7 +246,7 @@ a#learn-more:hover {
 	clear: both;
     padding:40px;
     margin:0 auto 80px auto;
-    background-color: rgb(19,34,77);
+    background-color: #13224D;
     /* background-color: rgba(19,34,77,0.7); */
     /* background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAI0lEQVQIW2NkgAJhJd//ICYjiIBxwALInLf3NjPCBUAckAoAHYgLB0CygrIAAAAASUVORK5CYII=) repeat; */
 }
@@ -323,13 +348,10 @@ html.ie7 #launchlitemodule #signup .signup-left {
 
 #signup-page header h1 {
     font-family: Raleway, Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: 700;
-    font-style: normal;
-    font-size:2.5em;
-    line-height:2.4em;
+    font-size:3.4em;
     text-align: center;
     color: #D4DEE0;
-    text-shadow: #C53FA7 -1px 1px 0;
+    text-shadow: #AA893A -1px 1px 0;
     position:relative;
     margin:0;
 }
