--- a/web/app/themes/launcheffect/ss/main.css
+++ b/web/app/themes/launcheffect/ss/main.css
@@ -355,12 +355,12 @@ html.ie7 #launchlitemodule #signup .signup-left {
         #D4DEE0 -0.2px 0.2px 0,
         #D4DEE0 -0.3px 0.3px 0,
         #D4DEE0 -0.4px 0.4px 0,
-        #AA893A -0.5px 0.5px 0,
-        #AA893A -0.6px 0.6px 0,
-        #AA893A -0.7px 0.7px 0,
-        #AA893A -0.8px 0.8px 0,
-        #AA893A -0.9px 0.9px 0,
-        #AA893A -1px 1px 0;
+        #C53FA7 -0.5px 0.5px 0,
+        #C53FA7 -0.6px 0.6px 0,
+        #C53FA7 -0.7px 0.7px 0,
+        #C53FA7 -0.8px 0.8px 0,
+        #C53FA7 -0.9px 0.9px 0,
+        #C53FA7 -1px 1px 0;
     position:relative;
     margin:0;
 }
@@ -807,7 +807,7 @@ span.privacy-policy {
     display:block;
     padding-top:10px;
     font-family: Raleway, Verdana, Geneva, Tahoma, sans-serif;
-    color: #D4DEE0;
+    color: #AA893A;
     font-size: 3em;
     line-height:1.2em;
 }
@@ -820,7 +820,7 @@ span.privacy-policy {
     margin:0 0 15px 0;
     font-family: Raleway, Verdana, Geneva, Tahoma, sans-serif;
     font-size: 2em;
-    color: #D4DEE0 !important;
+    color: #AA893A !important;
     text-transform: capitalize;
     text-shadow: 0px 2px 1px #333;
 }
@@ -855,7 +855,7 @@ span.privacy-policy {
 ================================================== */
 
 ul#inner-footer {
-    margin:22px 0 0 0;
+    display: inline-table;
 }
 
 ul#inner-footer li {
