--- a/web/app/themes/launcheffect/ss/main.css
+++ b/web/app/themes/launcheffect/ss/main.css
@@ -115,7 +115,7 @@ body {
 
 html,
 body {
-    background-color: rgb(19,34,77);
+    background-color: #D4DEE0;
     background-image: url('../im/background.jpg');
     background-repeat: no-repeat;
     background-position: center center;
