--- a/web/app/themes/launcheffect/ss/main.css
+++ b/web/app/themes/launcheffect/ss/main.css
@@ -348,7 +348,7 @@ html.ie7 #launchlitemodule #signup .signup-left {
     font-family: Raleway, Verdana, Geneva, Tahoma, sans-serif;
     font-size:2.4em;
     text-align: center;
-    color: #AA893A;
+    color: #D4DEE0;
     /*text-shadow: #D4DEE0 -0.1px 0.1px 0,
         #D4DEE0 -0.2px 0.2px 0,
         #D4DEE0 -0.3px 0.3px 0,
