--- a/web/app/themes/launcheffect/ss/main.css
+++ b/web/app/themes/launcheffect/ss/main.css
@@ -441,7 +441,7 @@ html.ie7 #launchlitemodule #signup .signup-left {
 #signup h2 {
     font-family: Raleway, Verdana, Geneva, Tahoma, sans-serif;
     font-size: 2em;
-    color: #13224D;
+    color: #8EA669;
     text-shadow: 0px 2px 1px #333;
 }
 
