Setup BigText.js

--- a/web/app/themes/launcheffect/ss/main.css
+++ b/web/app/themes/launcheffect/ss/main.css
@@ -347,7 +347,7 @@ html.ie7 #launchlitemodule #signup .signup-left {
 
 #signup-page header h1 {
     font-family: Raleway, Verdana, Geneva, Tahoma, sans-serif;
-    font-size:2.4em;
+    /*font-size:2.4em;*/
     text-align: center;
     color: #D4DEE0;
     /*text-shadow: #D4DEE0 -0.1px 0.1px 0,
