--- a/web/app/themes/launcheffect/ss/main.css
+++ b/web/app/themes/launcheffect/ss/main.css
@@ -117,28 +117,35 @@ body {
     }
 }
 
-#background {
-    background-image: url('../im/background.jpg');
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    position: fixed;
-    z-index: 0;
-    min-width: 100%;
-    min-height: 100%;
-    left: 0px;
-    top: 0px;
-    overflow: hidden;
-    opacity: 0;
-    -webkit-animation-name: fade-in;
-    -webkit-animation-duration: 1s;
-    -webkit-animation-timing-function: ease-in;
-    -webkit-animation-iteration-count: 1;
-    -webkit-animation-delay: 2s;
+@media only screen and (min-width: 320px) and (max-width: 992px) {
+    #background {
+        background-image: url('../im/background.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-attachment: fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        position: fixed;
+        z-index: 0;
+        min-width: 100%;
+        min-height: 100%;
+        left: 0px;
+        top: 0px;
+        overflow: hidden;
+        opacity: 0;
+        -webkit-animation-name: fade-in;
+        -webkit-animation-duration: 1s;
+        -webkit-animation-timing-function: ease-in;
+        -webkit-animation-iteration-count: 1;
+        -webkit-animation-delay: 2s;
+    }
+}
+
+#bgndVideo {
+    background:#000;
+    background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAJElEQVQIW2NkwAT/GdHE/gP5jMiCYAGQIpggTACuEq4CatR/ABtJBwTL3L3TAAAAAElFTkSuQmCC) repeat;
 }
 
 #background.visible {
@@ -263,9 +270,15 @@ a#learn-more:hover {
     padding:40px;
     margin:0 auto 80px auto;
     background-color: #13224D;
-    -webkit-box-shadow: 0px 0px 10px #111;
+    background-color: rgba(19,34,77,0.8);
+    border: 1px solid #FFF;
+    -webkit-box-shadow: 0px 0px 5px rgb(212,222,224);
+    -moz-box-shadow: 0px 0px 5px rgb(212,222,224);
+    box-shadow: 0px 0px 5px rgb(212,222,224);
+
+    /*-webkit-box-shadow: 0px 0px 10px #111;
     -moz-box-shadow: 0px 0px 10px #111;
-    box-shadow: 0px 0px 10px #111;
+    box-shadow: 0px 0px 10px #111;*/
 }
 
 /*----- Sizes -----*/
