--- a/web/app/themes/launcheffect/ss/main.css
+++ b/web/app/themes/launcheffect/ss/main.css
@@ -26,6 +26,7 @@
 #Reset & Basics
 #Clearfix
 #Basic Styles
+#Facebook Like Button
 #Learn More Tab
 #Container
 #Form
@@ -228,6 +229,16 @@ a:active {
 }
 .alignleft {
     text-align: left;
+}
+
+/* Facebook Like
+================================================== */
+
+#fb-like-container {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 30px;
+    padding-left: 20px;
 }
 
 /* Learn More Tab
