Make the header image responsive

--- a/web/app/themes/launcheffect/ss/main.css
+++ b/web/app/themes/launcheffect/ss/main.css
@@ -175,8 +175,9 @@ input#submit-button,
 }
 
 img {
-    max-width:100%;
-    height:auto;
+    max-height: 200px;
+    width: auto;
+    max-width: 100%;
 }
 
 a:link,
