--- a/web/app/themes/launcheffect/ss/main.css
+++ b/web/app/themes/launcheffect/ss/main.css
@@ -380,21 +380,11 @@ html.ie7 #launchlitemodule #signup .signup-left {
 
 #signup-page header h1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    /*font-size:2.4em;*/
     text-align: center;
-    color: #FDFDBA;
-    /*text-shadow: #D4DEE0 -0.1px 0.1px 0,
-        #D4DEE0 -0.2px 0.2px 0,
-        #D4DEE0 -0.3px 0.3px 0,
-        #D4DEE0 -0.4px 0.4px 0,
-        #C53FA7 -0.5px 0.5px 0,
-        #C53FA7 -0.6px 0.6px 0,
-        #C53FA7 -0.7px 0.7px 0,
-        #C53FA7 -0.8px 0.8px 0,
-        #C53FA7 -0.9px 0.9px 0,
-        #C53FA7 -1px 1px 0; */
+    color: #fff;
     position:relative;
     margin:0;
+    text-transform: uppercase;
 }
 
 #signup-page header h1 span {
