--- a/web/app/themes/launcheffect/ss/main.css
+++ b/web/app/themes/launcheffect/ss/main.css
@@ -234,7 +234,7 @@ a:active {
 ================================================== */
 
 #learn-more-tab {
-    margin: 0px auto 30px auto !important;
+    margin: 0px auto 10px auto !important;
     padding:0px !important;
     width: 590px;
 }
@@ -270,7 +270,7 @@ a#learn-more:hover {
     padding:40px;
     margin:0 auto 80px auto;
     background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 0.7);
     /*border: 1px solid #FFF;*/
     -webkit-box-shadow: 0px 0px 10px #111;
     -moz-box-shadow: 0px 0px 10px #111;
@@ -919,6 +919,7 @@ span.privacy-policy {
 
 ul#inner-footer {
     display: inline-table;
+    margin-top: 40px;
 }
 
 ul#inner-footer li {
@@ -948,8 +949,8 @@ ul#inner-footer li.inner-footer_icon {
 
 ul#inner-footer li.inner-footer_icon a {
     display:block;
-    width:48px;
-    height:48px;
+    width:24px;
+    height:24px;
     text-indent:-9999px;
 }
 
