--- a/web/app/themes/launcheffect/ss/main.css
+++ b/web/app/themes/launcheffect/ss/main.css
@@ -492,19 +492,21 @@ html.ie7 #launchlitemodule #signup .signup-left {
 #signup h2.social-heading,
 #signup label {
     display:block;
-    margin:0 0 8px 0;
+    margin-top: 8px;
+    margin-bottom: 8px;
     line-height:1.3em;
-    font-family: Cubano, Helvetica, Arial, sans-serif !important;
+    /*font-family: Cubano, Helvetica, Arial, sans-serif !important;*/
     font-size: 1.1em;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     color: #D4DEE0;
     text-shadow: none;
+    text-align: left;
 }
 
 /* Required field asterisk */
-#signup label span {
+/*#signup label span {
     color: #DA342E;
-}
+}*/
 
 #signup input[type=text],
 #signup input[type=email],
