--- a/web/app/themes/launcheffect/ss/main.css
+++ b/web/app/themes/launcheffect/ss/main.css
@@ -105,7 +105,7 @@ body {
 
 html,
 body {
-    background-color: #13224D;
+    background-color: rgb(0, 0, 0);
 }
 
 #background {
@@ -269,17 +269,17 @@ a#learn-more:hover {
 	clear: both;
     padding:40px;
     margin:0 auto 80px auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.7);
-    /*border: 1px solid #FFF;*/
-    -webkit-box-shadow: 0px 0px 10px #111;
-    -moz-box-shadow: 0px 0px 10px #111;
-    box-shadow: 0px 0px 10px #111;
-
-    /*
+    background-color: #13224D;
+    background-color: rgba(19,34,77,0.8);
+    border: 2px solid #FFF;
     -webkit-box-shadow: 0px 0px 5px rgb(212,222,224);
     -moz-box-shadow: 0px 0px 5px rgb(212,222,224);
     box-shadow: 0px 0px 5px rgb(212,222,224);
+
+    /*
+    -webkit-box-shadow: 0px 0px 10px #111;
+    -moz-box-shadow: 0px 0px 10px #111;
+    box-shadow: 0px 0px 10px #111;
     */
 }
 
